--- a/src/app/share/navbar-board-header/navbar-board-header.component.html
+++ b/src/app/share/navbar-board-header/navbar-board-header.component.html
@@ -100,7 +100,7 @@
                             </div>
                           </a>
                           <a class="header__notify-link" routerLink="{{activity.url}}" *ngIf="!activity.card">
-                            <img src="https://dizibrand.com/wp-content/uploads/2019/07/trello-la-gi-dizibrand-1.png"
+                            <img src="https://firebasestorage.googleapis.com/v0/b/trello-h3k.appspot.com/o/h3k.png?alt=media&token=575e3071-bd05-44f2-89fb-04851d21af49"
                                  alt=""
                                  class="header__notify-img">
                             <div class="header__notify-info">
@@ -210,24 +210,3 @@
     </footer>
   </div>
 </div>
-
-<!--<div class="modal" id="addMember">-->
-<!--  <div class="modal-background">-->
-<!--    <div class="modal-card">-->
-<!--      <form [formGroup]="addMemberForm" class="form-group">-->
-<!--        <header class="modal-card-head" style="width: 300px">-->
-<!--          <p>Mời một thành viên tham gia</p>-->
-<!--        </header>-->
-<!--          <input type="email" class="form-control" formControlName="email" placeholder=" Địa chỉ email" style="width: 300px;border-top-width: 0px;padding-top: 10px;border-bottom-width: 0px;padding-bottom: 10px;border-left-width: 0px;border-right-width: 0px;">-->
-<!--        <div  *ngIf="this.addMemberForm.get('email')?.invalid && (this.addMemberForm.get('email')?.dirty || this.addMemberForm.get('email')?.touched)">-->
-<!--        <div *ngIf="this.addMemberForm.get('email')?.errors?.required">-->
-<!--        </div>-->
-<!--        </div>-->
-<!--        <footer class="modal-card-foot" style="width: 300px">-->
-<!--          <button id="1" class="button is-info add-new-card"  (click)="createAddMember()" [disabled]="addMemberForm.invalid">Thêm thành viên</button>-->
-<!--          <button id="2" class="button is-light" (click)="closeAddMember()">Hủy</button>-->
-<!--        </footer>-->
-<!--      </form>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
