--- a/src/app/share/navbar/navbar.component.html
+++ b/src/app/share/navbar/navbar.component.html
@@ -39,35 +39,35 @@
     <div class="dropdown is-hoverable is-right">
       <div class="dropdown-trigger">
         <a class="icon-link"><i class="fas fa-bell"></i></a>
-        <!--        <span class="header__cart-notice">{{notificationService.unreadNotice}}</span>-->
+                <span class="header__cart-notice">{{notificationService.unreadNotice}}</span>
       </div>
-      <!--      <div class="dropdown-menu" id="dropdown-menu5" role="menu">-->
-      <!--        <div class="dropdown-content" style="padding: 0">-->
-      <!--          <div class="header__navbar-item header__navbar-item&#45;&#45;has-notify">-->
-      <!--            <div class="header__notify">-->
-      <!--              <header class="header__notify-header">-->
-      <!--                <h3>Notifications</h3>-->
-      <!--                <a (click)="markAllAsRead()"-->
-      <!--                   style="color: white; font-size: 14px; margin-right: 16px; border-bottom: 1px solid">Mark all as-->
-      <!--                  read</a>-->
-      <!--              </header>-->
-      <!--              <ul class="header__notify-list">-->
-      <!--                <li class="header__notify-item" *ngFor="let notification of notificationService.notification"-->
-      <!--                    (click)="markReadNotification(notification)" [class.mark-read]="notification.status">-->
-      <!--                  <a class="header__notify-link" routerLink="{{notification.url}}">-->
-      <!--                    <img src="https://dizibrand.com/wp-content/uploads/2019/07/trello-la-gi-dizibrand-1.png" alt=""-->
-      <!--                         class="header__notify-img">-->
-      <!--                    <div class="header__notify-info">-->
-      <!--                      <span class="header__notify-name">{{notification.title}}</span>-->
-      <!--                      <span class="header__notify-description">{{notification.content}}</span>-->
-      <!--                    </div>-->
-      <!--                  </a>-->
-      <!--                </li>-->
-      <!--              </ul>-->
-      <!--            </div>-->
-      <!--          </div>-->
-      <!--        </div>-->
-      <!--      </div>-->
+            <div class="dropdown-menu" id="dropdown-menu5" role="menu">
+              <div class="dropdown-content" style="padding: 0">
+                <div class="header__navbar-item header__navbar-item--has-notify">
+                  <div class="header__notify">
+                    <header class="header__notify-header">
+                      <h3>Notifications</h3>
+                      <a (click)="markAllAsRead()"
+                         style="color: white; font-size: 14px; margin-right: 16px; border-bottom: 1px solid">Mark all as
+                        read</a>
+                    </header>
+                    <ul class="header__notify-list">
+                      <li class="header__notify-item" *ngFor="let notification of notificationService.notification"
+                          (click)="markReadNotification(notification)" [class.mark-read]="notification.status">
+                        <a class="header__notify-link" routerLink="{{notification.url}}">
+                          <img src="https://dizibrand.com/wp-content/uploads/2019/07/trello-la-gi-dizibrand-1.png" alt=""
+                               class="header__notify-img">
+                          <div class="header__notify-info">
+                            <span class="header__notify-name">{{notification.title}}</span>
+                            <span class="header__notify-description">{{notification.content}}</span>
+                          </div>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
     </div>
   </div>
   <div class="icon-item" *ngIf="currentUser" >
