--- a/src/app/share/navbar/navbar.component.scss
+++ b/src/app/share/navbar/navbar.component.scss
@@ -234,7 +234,7 @@ h1.app-name {
   color: red;
 }
 
-$primary: hsl(171, 100%, 41%);
+$primary: hsl(0, 0%, 0%);
 $grey-darker: hsl(0, 0%, 21%);
 $grey-dark: hsl(0, 0%, 29%);
 $grey: hsl(0, 0%, 48%);
@@ -386,7 +386,7 @@ button:focus {
   content: "";
   border-width: 20px 27px;
   border-style: solid;
-  border-color: transparent transparent rgb(100, 181, 216) transparent;
+  border-color: transparent transparent rgb(109, 127, 204) transparent;
   position: absolute;
   right: 4px;
   top: -29px;
@@ -415,12 +415,12 @@ button:focus {
 }
 
 .mark-read {
-  background-color: rgb(227, 235, 240);
+  background-color: rgb(109, 127, 204);
 }
 
 .header__notify-header {
   height: 40px;
-  background-color: rgb(100, 181, 216);
+  background-color: rgb(109, 127, 204);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -441,7 +441,7 @@ button:focus {
   max-height: 400px;
   flex-grow: 1;
   overflow-y: auto;
-  background-color: rgb(208, 232, 243);
+  background-color: rgb(109, 127, 204);
 }
 
 ::-webkit-scrollbar-track {
@@ -453,7 +453,7 @@ button:focus {
 }
 
 .header__notify-item:hover {
-  background-color: rgb(182, 226, 247);
+  background-color: rgb(109, 127, 204);
 }
 
 .header__notify-item--viewed {
@@ -479,7 +479,7 @@ button:focus {
 .header__notify-name {
   display: block;
   font-size: 18px;
-  color: black;
+  color: #ffffff;
   font-weight: 400;
 }
 
@@ -487,12 +487,12 @@ button:focus {
   display: block;
   font-size: 13px;
   line-height: 1.8rem;
-  color: #756f6e;
+  color: #ffffff;
 }
 
 .header__notify-footer {
   display: flex;
-  background-color: rgb(100, 181, 216);
+  background-color: rgb(109, 127, 204);
 }
 
 .header__notify-footer-btn {
@@ -508,12 +508,12 @@ button:focus {
   position: absolute;
   right: 12px;
   padding: 1px 4px;
-  background-color: rgb(100, 181, 216);
+  background-color: rgb(248, 0, 0);
   color: white;
   font-size: 12px;
   line-height: 12px;
   border-radius: 10px;
-  border: 1px solid rgb(100, 181, 216);
+  border: 1px solid rgb(109, 127, 204);
 }
 
 .search-result-primary {
