--- a/src/app/trello/workspace/workspacemembers/workspace-members.component.css
+++ b/src/app/trello/workspace/workspacemembers/workspace-members.component.css
@@ -297,7 +297,7 @@ h1.app-name {
 }
 
 .background-current-user {
-  background-color: rgb(187, 227, 246);
+  background-color: rgba(109, 127, 204, 0.25);
 
 }
 
