--- a/src/app/recover-password/recover-password.component.html
+++ b/src/app/recover-password/recover-password.component.html
@@ -53,8 +53,8 @@
   <div class="overlay-container">
     <div class="overlay">
       <div class="overlay-panel overlay-right">
-        <h1>Quên mật khẩu!</h1>
-        <p>Nhập chi tiết tên tài khoản của bạn để lấy lại mật khẩu</p>
+        <h1>Đã có tài khoản!</h1>
+        <p>Bấm đăng nhập ngay!</p>
         <button type="submit" class="ghost" id="signUp" routerLink="/login">Đăng nhập</button>
       </div>
     </div>
