--- a/src/app/trello/home/home.component.html
+++ b/src/app/trello/home/home.component.html
@@ -25,11 +25,11 @@
       <h1><i class="far fa-clipboard"></i>Bảng được chia sẻ với bạn</h1>
     </div>
     <div class="section-board">
-      <div class="card">
-        <div class="card-header"><p class="card-header-title">D</p></div>
+      <div class="card"  *ngFor="let board of sharedBoards" routerLink="/trello/boards/{{board.id}}">
+        <div class="card-header"><p class="card-header-title">{{board.title}}</p></div>
         <div class="card-content">
           <div class="content">
-            <span style="font-size: small"><b>Chủ sở hữu: </b>F</span>
+            <span style="font-size: small"><b>Chủ sở hữu: </b>{{board.owner}}</span>
           </div>
         </div>
       </div>
