--- a/src/app/share/side-bar/side-bar/side-bar.component.html
+++ b/src/app/share/side-bar/side-bar/side-bar.component.html
@@ -14,8 +14,8 @@
       <span (click)="showWorkspaceButton(i)"><i style="position: absolute; margin-top: -35px; margin-left: 206px" id="arrow-down-{{i}}" class="fas fa-angle-down"></i></span>
       <span (click)="showWorkspaceButton(i)"><i style="position: absolute; margin-top: -35px; margin-left: 206px" id="arrow-up-{{i}}" class="fas fa-angle-up is-hidden"></i></span>
       <ul id="workspace-{{i}}" class="is-hidden">
-        <li><a style="font-size: 10px" routerLink="/workspaces/{{workspace.id}}/home">Home</a></li>
-        <li><a routerLink="/workspaces/{{workspace.id}}/members">Members</a></li>
+        <li><a style="font-size: 10px" routerLink="/workspaces/{{workspace.id}}/home">Bảng</a></li>
+        <li><a routerLink="/workspaces/{{workspace.id}}/members">Thành viên</a></li>
       </ul>
     </li>
   </ul>
