--- a/src/app/trello/workspace/workspacehome/workspace-home.component.html
+++ b/src/app/trello/workspace/workspacehome/workspace-home.component.html
@@ -2,7 +2,7 @@
   <app-side-bar [workspaces]="workspaces"></app-side-bar>
   <div class="container column is-10" style="padding: 0px 13px 13px 0px;">
     <div class="title-board">
-      <h1><i class="far fa-clipboard"></i>Boards</h1>
+      <h1><i class="far fa-clipboard"></i>Bảng</h1>
     </div>
     <div class="section-board">
       <div class="card" (click)="displayAddBoardModal()" *ngIf="allowEdit">
