--- a/src/app/share/navbar-board-header/navbar-board-header.component.html
+++ b/src/app/share/navbar-board-header/navbar-board-header.component.html
@@ -25,7 +25,7 @@
         <button class="button is-primary">
           <i class="far fa-star"></i>
         </button>
-        <button *ngIf="canEdit && !isInWorkspace" class="button is-primary"
+        <button *ngIf="canEdit" class="button is-primary"
                 (click)="toggleUserSearchBar()">
           <i class="fas fa-user-plus"></i>Mời
         </button>
