sua FE share boarch

--- a/src/app/trello/board-view/board-view.component.html
+++ b/src/app/trello/board-view/board-view.component.html
@@ -1,5 +1,6 @@
 <div class="root">
   <app-navbar-board-header
+    [tags]="tags"
     [canEdit]="this.canEdit"
     [currentBoard]="this.currentBoard"
     [members]="this.members"
