--- a/src/app/share/navbar/navbar.component.html
+++ b/src/app/share/navbar/navbar.component.html
@@ -32,7 +32,7 @@
   <!--  </div>-->
   <div class="nav-brand-start">
     <div class="nav-item-start">
-      <h1><i class="fab fa-trello logo-icon"></i>Trello H3K</h1>
+      <h1><i class="fab fa-trello logo-icon" style="margin-left: 145px"></i>Trello H3K</h1>
     </div>
   </div>
   <div class="icon-item" *ngIf="currentUser">
