--- a/src/app/share/navbar/navbar.component.scss
+++ b/src/app/share/navbar/navbar.component.scss
@@ -487,7 +487,7 @@ button:focus {
   display: block;
   font-size: 13px;
   line-height: 1.8rem;
-  color: #ffffff;
+  color: #756f6e;
 }
 
 .header__notify-footer {
