man hinh cai dat cho workspace

--- a/src/app/share/side-bar/side-bar/side-bar.component.html
+++ b/src/app/share/side-bar/side-bar/side-bar.component.html
@@ -16,6 +16,7 @@
       <ul id="workspace-{{i}}" class="is-hidden">
         <li><a style="font-size: 10px" routerLink="/workspaces/{{workspace.id}}/home">Bảng</a></li>
         <li><a routerLink="/workspaces/{{workspace.id}}/members">Thành viên</a></li>
+        <li><a routerLink="/workspaces/{{workspace.id}}/setting">Cài đặt</a></li>
       </ul>
     </li>
   </ul>
