--- a/src/app/trello/boards/boards.component.html
+++ b/src/app/trello/boards/boards.component.html
@@ -102,9 +102,9 @@
         <div class="control">
           <select class="input" [(ngModel)]="workspace.type" required #workspaceType="ngModel">
             <option value="IT">IT</option>
-            <option value="Accountant">Kế toán</option>
+            <option value="Kế toán">Kế toán</option>
             <option value="HR">Nhân sự</option>
-            <option value="Other">Khác</option>
+            <option value="Khác">Khác</option>
           </select>
         </div>
         <label class="label">Quyền hạn</label>
