--- a/src/app/trello/workspace/workspacemembers/workspace-members.component.html
+++ b/src/app/trello/workspace/workspacemembers/workspace-members.component.html
@@ -153,9 +153,9 @@
         <div class="control">
           <select class="input" [(ngModel)]="newWorkspace.type" required #workspaceType="ngModel">
             <option value="IT">IT</option>
-            <option value="Accountant">Kế toán</option>
+            <option value="Kế toán">Kế toán</option>
             <option value="HR">Nhân sự</option>
-            <option value="Other">Khác</option>
+            <option value="Khác">Khác</option>
           </select>
         </div>
         <label class="label">Quyền hạn</label>
@@ -227,7 +227,7 @@
                   (click)="addSingleMember(pendingRole.value)">Thêm
           </button>
         </div>
-        <button class="button is-light is-right" (click)="hideSingleInvite()">Hủy</button>
+        <button class="button is-light " (click)="hideSingleInvite()">Hủy</button>
       </footer>
     </div>
   </div>
