--- a/src/app/share/navbar/navbar.component.html
+++ b/src/app/share/navbar/navbar.component.html
@@ -58,8 +58,8 @@
                           <img src="https://dizibrand.com/wp-content/uploads/2019/07/trello-la-gi-dizibrand-1.png" alt=""
                                class="header__notify-img">
                           <div class="header__notify-info">
-                            <span class="header__notify-name">{{notification.title}}</span>
-                            <span class="header__notify-description">{{notification.content}}</span>
+                            <span class="header__notify-name" style="color: white">{{notification.title}}</span>
+                            <span class="header__notify-description" style="color: white">{{notification.content}}</span>
                           </div>
                         </a>
                       </li>
