--- a/src/app/share/navbar/navbar.component.html
+++ b/src/app/share/navbar/navbar.component.html
@@ -2,75 +2,84 @@
   <span class="icon-item">
       <a routerLink="/trello" class="icon-link"><i class="fas fa-home"></i></a>
   </span>
-  <!--  <div id="search-section">-->
-  <!--    <div style="position: relative" id="search-results">-->
-  <!--      <div *ngIf="searchResults.length" style="position: absolute; top: 40px; width: 300px; z-index: 1"-->
-  <!--           class="dropdown-content">-->
-  <!--        <span class="dropdown-item" style="font-weight: bold">CARDS:</span>-->
-  <!--        <a routerLink="/trello/boards/{{searchResult.board.id}}" (click)="clearSearch(searchResult)"-->
-  <!--           *ngFor="let searchResult of this.searchResults" class="dropdown-item">-->
-  <!--          <ul>-->
-  <!--            <li>-->
-  <!--              <span class="search-result-primary">{{searchResult.card.title}}</span>-->
-  <!--              <span> in </span><span class="search-result-secondary">{{searchResult.column.title}}</span>-->
-  <!--            </li>-->
-  <!--            <li>-->
-  <!--              <span> on </span><span class="search-result-secondary">{{searchResult.board.title}}</span>-->
-  <!--              <span> by @</span><span class="search-result-secondary">{{searchResult.board.owner.username}}</span>-->
-  <!--            </li>-->
-  <!--            <li>-->
-  <!--              <span class="search-result-preview-secondary">"{{searchResult.preview[0]}}</span>-->
-  <!--              <span class="search-result-preview-primary">{{searchResult.preview[1]}}</span>-->
-  <!--              <span class="search-result-preview-secondary">{{searchResult.preview[2]}}"</span>-->
-  <!--            </li>-->
-  <!--          </ul>-->
-  <!--        </a>-->
-  <!--      </div>-->
-  <!--    </div>-->
-  <!--    <input id="search-input" class="input" type="text" placeholder="Search..." style="width: 200px"-->
-  <!--           [(ngModel)]="searchString" (keyup)="search()">-->
-  <!--  </div>-->
   <div class="nav-brand-start">
     <div class="nav-item-start">
-      <h1><i class="fab fa-trello logo-icon" style="margin-left: 145px"></i>Trello H3K</h1>
+      <h1><i class="fab fa-trello logo-icon" style="margin-left: 300px"></i>Trello H3K</h1>
     </div>
+  </div>
+  <div id="search-section" class="">
+    <div style="position: relative" id="search-results">
+      <div *ngIf="searchResults.length" style="position: absolute; top: 40px; width: 300px; z-index: 1"
+           class="dropdown-content">
+        <span class="dropdown-item" style="font-weight: bold">CARDS:</span>
+        <a routerLink="/trello/board/{{searchResult.board.id}}"
+           *ngFor="let searchResult of this.searchResults | paginate:{
+    itemsPerPage:pageSize,
+    currentPage:page,
+    totalItems:count
+    }" class="dropdown-item" (click)="clearSearch(searchResult)">
+          <ul>
+            <li>
+              <span class="search-result-primary">{{searchResult.card.title}}</span>
+              <span> in </span><span class="search-result-secondary">{{searchResult.column.title}}</span>
+            </li>
+            <li>
+              <span> on </span><span class="search-result-secondary">{{searchResult.board.title}}</span>
+              <span> by @</span><span class="search-result-secondary">{{searchResult.board.owner.username}}</span>
+            </li>
+            <li>
+              <span class="search-result-preview-secondary">"{{searchResult.preview[0]}}</span>
+              <span class="search-result-preview-primary">{{searchResult.preview[1]}}</span>
+              <span class="search-result-preview-secondary">{{searchResult.preview[2]}}"</span>
+            </li>
+          </ul>
+        </a>
+        <pagination-controls class="my-pagination"
+                             previousLabel="Trước"
+                             nextLabel="Sau"
+                             [responsive]="true"
+                             (pageChange)="handlePageChange($event)"></pagination-controls>
+      </div>
+    </div>
+    <input id="search-input" class="input" type="text" placeholder="Search..." style="width: 200px"
+           [(ngModel)]="searchString" (keyup)="search()">
   </div>
   <div class="icon-item" *ngIf="currentUser">
     <div class="dropdown is-hoverable is-right">
       <div class="dropdown-trigger">
         <a class="icon-link"><i class="fas fa-bell"></i></a>
-                <span class="header__cart-notice">{{notificationService.unreadNotice}}</span>
+        <span class="header__cart-notice">{{notificationService.unreadNotice}}</span>
       </div>
-            <div class="dropdown-menu" id="dropdown-menu5" role="menu">
-              <div class="dropdown-content" style="padding: 0">
-                <div class="header__navbar-item header__navbar-item--has-notify">
-                  <div class="header__notify">
-                    <header class="header__notify-header">
-                      <h3>Notifications</h3>
-                      <a (click)="markAllAsRead()"
-                         style="color: white; font-size: 14px; margin-right: 16px; border-bottom: 1px solid">Mark all as
-                        read</a>
-                    </header>
-                    <ul class="header__notify-list">
-                      <li class="header__notify-item" *ngFor="let notification of notificationService.notification"
-                          (click)="markReadNotification(notification)" [class.mark-read]="notification.status">
-                        <a class="header__notify-link" routerLink="{{notification.url}}">
-                          <img src="https://dizibrand.com/wp-content/uploads/2019/07/trello-la-gi-dizibrand-1.png" alt=""
-                               class="header__notify-img">
-                          <div class="header__notify-info">
-                            <span class="header__notify-name" style="color: white">{{notification.title}}</span>
-                            <span class="header__notify-description" style="color: white">{{notification.content}}</span>
-                          </div>
-                        </a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
+      <div class="dropdown-menu" id="dropdown-menu5" role="menu">
+        <div class="dropdown-content" style="padding: 0">
+          <div class="header__navbar-item header__navbar-item--has-notify">
+            <div class="header__notify">
+              <header class="header__notify-header">
+                <h3>Notifications</h3>
+                <a (click)="markAllAsRead()"
+                   style="color: white; font-size: 14px; margin-right: 16px; border-bottom: 1px solid">Mark all as
+                  read</a>
+              </header>
+              <ul class="header__notify-list">
+                <li class="header__notify-item" *ngFor="let notification of notificationService.notification"
+                    (click)="markReadNotification(notification)" [class.mark-read]="notification.status">
+                  <a class="header__notify-link" routerLink="{{notification.url}}">
+                    <img src="https://dizibrand.com/wp-content/uploads/2019/07/trello-la-gi-dizibrand-1.png" alt=""
+                         class="header__notify-img">
+                    <div class="header__notify-info">
+                      <span class="header__notify-name" style="color: white">{{notification.title}}</span>
+                      <span class="header__notify-description" style="color: white">{{notification.content}}</span>
+                    </div>
+                  </a>
+                </li>
+              </ul>
             </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="icon-item" *ngIf="currentUser" >
+  <div class="icon-item" *ngIf="currentUser">
     <div class="dropdown is-hoverable is-right">
       <div class="nav-item-start">
         <h2>{{navbarService.loggedInUser.username}}</h2>
@@ -80,7 +89,7 @@
           <img [src]="navbarService.loggedInUser.image" class="img-circle"/>
         </a>
       </div>
-      <div class="dropdown-menu" id="dropdown-menu" role="menu" >
+      <div class="dropdown-menu" id="dropdown-menu" role="menu">
         <div class="dropdown-content">
           <div href="#" class="dropdown-item">
             <div class="user">
